navbar nav-link spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,40 @@
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
-  *, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 .header {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    
-    
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
 }
 .contact {
-    padding: 10px;
+  padding: 10px;
 }
-.nav-link{
-    color: white;
+.nav-link {
+  color: gray;
 }
 .nav-link:active {
-    color: orange;
+  color: orange;
 }
-.navbar-nav .nav-item{ 
-    display: flex;
-    justify-content: end;
+.nav-link:hover {
+  color: orange;
 }
-.navbar-toggler-icon button{
-    color: white; 
-    /* nece da radi */
+.nav-item {
+  padding-right: 30px;
+}
+.navbar-toggler-icon button {
+  color: white;
+  /* nece da radi */
 }
 .service__img {
-    width: 100%;
+  width: 100%;
 }
 button {
-    background-color: orange;
+  background-color: orange;
 }
-
-
-
